bases/floci-gcp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  type: ClusterIP
  selector:
    app: floci-gcp
  ports:
    - protocol: TCP
      port: 4588
      targetPort: api-port
